kubernetes-debug/kit/iptables-tailer.yaml
---
  apiVersion: "apps/v1"
  kind: "DaemonSet"
  metadata:
    name: "kube-iptables-tailer"
    namespace: "kube-system"
  spec:
    selector:
      matchLabels:
        app: "kube-iptables-tailer"
    template:
      metadata:
        labels:
          app: "kube-iptables-tailer"
      spec:
        serviceAccountName: kit
        containers:
          - name: "kube-iptables-tailer"
            command:
              - "/kube-iptables-tailer"
              - "--log_dir=/my-service-logs" # change the output directory of service logs
              - "--v=4" # enable V-leveled logging at this level
            image: "virtualshuric/kube-iptables-tailer:8d4296a"
            volumeMounts:
              - name: "iptables-logs"
                mountPath: "/var/log"
                readOnly: true
              - name: "service-logs"
                mountPath: "/my-service-logs"

        volumes:
          - name: "iptables-logs"
            hostPath:
              # absolute path of the directory containing iptables log file on your host
              path: "/var/log"
          - name: "service-logs"
            emptyDir: {}
